API Test Fullscreen.TopContentInset is asserting on Yosemite https://bugs.webkit.org/show_bug.cgi?id=165877

Reviewed by Brady Eidson.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::setTopContentInset):
* WebProcess/WebPage/WebPage.cpp:
* WebProcess/WebPage/WebPage.h:
* WebProcess/WebPage/WebPage.messages.in:
We don't use fences on Yosemite, but this codepath still tried to.
Instead of guarding with PLATFORM(COCOA), make use of the more accurate
HAVE(COREANIMATION_FENCES) guard.


Canonical link: https://commits.webkit.org/183483@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209839 268f45cc-cd09-0410-ab3c-d52691b4dbfc